# share-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  format.yml  release.yml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: routes.py
backend/app/models/: room.py
backend/app/schemas/: room_schema.py
backend/app/services/: file_service.py
